<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#F2F2F3"
    android:id="@+id/loginLayout">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyStyle"
        android:layout_marginTop="100dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEmailLogIn"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/email"
            android:backgroundTint="#453C5C"
            android:textColor="#453C5C"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:theme="@style/MyStyle"
        android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPasswordLogin"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password"
                android:backgroundTint="#453C5C"
                android:textColor="#453C5C"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        android:id="@+id/bLogIn"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonshape"
        android:onClick="onClickLogin"
        android:textColor="#453C5C"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:id="@+id/bRegisterLink"
        android:background="@drawable/buttonshape"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickRegisterLink"
        android:layout_marginTop="10dp"
        android:textColor="#453C5C"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/forgot_password"
        android:id="@+id/tvResend"
        android:layout_marginTop="20dp"
        android:onClick="onClickForgotPassword"
        android:textSize="15sp"
        android:textColor="#453C5C" />

</LinearLayout>
