<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F3"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:theme="@style/MyStyle"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etCollegeName"
                android:layout_weight="1"
                android:hint="@string/college_name"
                android:drawableStart="@drawable/college"
                android:inputType="text"
                android:textColor="#453C5C" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyStyle">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etCity"
                android:layout_weight="1"
                android:hint="@string/city"
                android:drawableStart="@drawable/city"
                android:inputType="text"
                android:textColor="#453C5C"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyStyle"
            android:layout_weight="1">
            <EditText
                android:id="@+id/etState"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/state"
                android:hint="@string/state"
                android:inputType="text"
                android:textColor="#453C5C" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyStyle"
            android:layout_weight="1">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPinCode"
                android:textColor="#453C5C"
                android:inputType="number"
                android:hint="@string/pincode"
                android:drawableStart="@drawable/pincode"
                android:maxLength="6"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyStyle">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/etPhone"
                android:layout_weight="1"
                android:drawableStart="@drawable/phone"
                android:textColor="#453C5C"
                android:hint="@string/phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyStyle">
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#453C5C" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyStyle">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password"
                android:textColor="#453C5C"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            android:id="@+id/bRegister"
            android:onClick="onClickRegister"
            android:background="@drawable/buttonshape"
            android:textColor="#453C5C"
            android:textStyle="bold"
            android:textSize="15sp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:id="@+id/bLogInLink"
            android:background="@drawable/buttonshape"
            android:onClick="onClickLoginLink"
            android:textColor="#453C5C"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

</LinearLayout>
